# compas

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
compas/: __init__.py  cli.py  config.py  database.py  fuseki.py  graphrag.py  main.py  models.py  navigate_client.py  repository.py  sample_data.py  service.py
compas/api/: __init__.py  artifacts.py  governance.py  graph.py  graphrag.py  knowledge.py  misc.py  relationships.py
compas/static/css/: styles.css
compas/static/js/: compas.js  graph.js
compas/templates/: base.html  macros.html
compas/templates/pages/: artifact_detail.html  artifacts.html  assessments.html  compliance.html  cost.html  dashboard.html  domain_detail.html  domains.html  equation_detail.html  equations.html  error.html  gaps.html  governance.html  graph.html  graphrag.html  knowledge.html  knowledge_detail.html  not_found.html  observability.html  relationships.html  requirement_detail.html  requirements.html  search.html  settings.html  standard_detail.html  standards.html
compas/templates/partials/: artifacts_table.html  assessments_table.html  changes_table.html  equations_table.html  graphrag_answer.html  growth.html  knowledge_table.html  notifications.html  object_history.html  object_status.html  relationships_table.html  requirements_table.html  search_results.html  (+1 more)
compas/web/: __init__.py  routes.py  templating.py
docs/: navigate-api.md
tests/: conftest.py  test_api.py  test_client.py  test_graph.py  test_performance.py  test_repository.py  test_service.py  test_web.py
