[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "compas"
version = "0.1.0"
description = "Local-first web dashboard (knowledge observatory) for the Navigate platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "isbak" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "pydantic-settings>=2.5",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
compas = "compas.cli:main"

[tool.setuptools.packages.find]
include = ["compas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["."]
